Pull current changes into main (#4)
* Add Script API Index generator

- Added tasks to generate script API index containing snake case alias for all public API types' members.
- Added tool for class hierarchy tree rendering.

* Pin EOL for script API index file to LF

* Add ANTLR Lexer to handle indentations

- In preparation for the upcoming development of TCBScript language (TheCellBeyond Scripting Language), indentation handling had been added, along with needed ANTLR dependencies.
- Remove NotNull annotation from State to fix leaking dependencies.
- Add third party license notice document, adjust distribution task to include required license notices.

* Add Parser and AST nodes for TCBScript

- Add parser for TCBScript, along with tool to track error and required AST node classes.

* Add disclaimer to README

* Add semantic pass and AST resolution

- Add new semantic pass to resolve symbols, validate and annotate AST nodes with resolution.
- Update Parser of TCBScript to support annotation on separated line, along with continue using BREAK token instead of CONTINUE token.
- Add test for semantic pass.
- API manifest index now record final status, APIManifest and APIType are updated to handle it accordingly.
- Add native access flag for test run configuration, bump JOML version to 1.10.9.

* Fix package typo from sematic to semantic

* Fix 2 left over typos

* Restructure test packages

* Add java source text emitter for code generator

Add JavaSourceWriter to emit valid java source text, which include import management, string and char escaping, indentation and declaration frame. This is use in place of the now archived JavaPoet.

* Add script transpiler and code gen

- Add transpiler and emitters to drive the java source writer, finish the code generation step in translation from TCBScript to Java.
- Improve for loop handling with range(...) and fix element type inference in for x in array.
- Add handling for built in logging via print() and print_<level>().
- 